# open-api

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
macros/: Cargo.toml
macros/src/: lib.rs  new_unchecked.rs
macros/tests/: new_type_unchecked.rs
oasbi/: Cargo.toml
oasbi/src/: amf.rs  ausf.rs  chf.rs  lib.rs  nrf.rs  nssf.rs  pcf.rs  progenitor_client.rs  smf.rs  udm.rs  udr.rs  upf.rs
oasbi/src/common/: amf_id.rs  fqdn.rs  generated.rs  ipv4_addr.rs  ipv4_addr_mask.rs  ipv6_addr.rs  ipv6_prefix.rs  mcc_mnc.rs  mod.rs  nf_type.rs  uri.rs
oasbi/src/modified/nrf/: access_token_req.rs  mod.rs  nf_profile1.rs
oasbi/src/service_properties/: amf.rs  ausf.rs  chf.rs  mbsmf.rs  mod.rs  nrf.rs  nssf.rs  pcf.rs  smf.rs  udm.rs  udr.rs  upf.rs
openapi-nfs/openapi-amf/: Cargo.toml  README.md
openapi-nfs/openapi-amf/src/: lib.rs  models.rs  types.rs
openapi-nfs/openapi-amf/src/apis/: individual_subscription_document.rs  individual_ue_context_document_communication.rs  individual_ue_context_document_location.rs  mod.rs  n1_n2_individual_subscription_document.rs  n1_n2_message_collection_collection.rs  n1_n2_subscriptions_collection_for_individual_ue_contexts_collection.rs  non_uen2_message_notification_individual_subscription_document.rs  non_uen2_messages_collection_collection.rs  non_uen2_messages_subscriptions_collection_collection.rs  subscriptions_collection_collection.rs  ue_context_document.rs  ue_contexts_collection.rs  ue_reach_ind_document.rs
openapi-nfs/openapi-amf/src/server/: mod.rs
openapi-nfs/openapi-ausf/: Cargo.toml  README.md
openapi-nfs/openapi-ausf/src/: header.rs  lib.rs  models.rs  types.rs
openapi-nfs/openapi-ausf/src/apis/: ausf_ueso_r_protection.rs  mod.rs  pro_se_authentication.rs  rg_authentication.rs  ue_authentications.rs  ue_parameters_update_protection.rs
openapi-nfs/openapi-ausf/src/server/: mod.rs
openapi-nfs/openapi-chf/: Cargo.toml  README.md
openapi-nfs/openapi-chf/src/: lib.rs  models.rs  types.rs
openapi-nfs/openapi-chf/src/apis/: default.rs
openapi-nfs/openapi-chf/src/server/: mod.rs
openapi-nfs/openapi-nrf/: Cargo.toml  README.md
openapi-nfs/openapi-nrf/src/: models.rs  types.rs
openapi-nfs/openapi-nrf/src/apis/: access_token_request.rs  bootstrapping_request.rs  complete_stored_search_document.rs  individual_scp_domain_routing_information_subscription_document.rs  mod.rs  nf_instance_id_document.rs  nf_instances_store.rs  scp_domain_routing_information_document.rs  scp_domain_routing_information_subscriptions_collection.rs  stored_search_document.rs  subscription_id_document.rs  subscriptions_collection.rs
openapi-nfs/openapi-nrf/src/server/: mod.rs
openapi-nfs/openapi-nssf/: Cargo.toml  README.md
openapi-nfs/openapi-nssf/src/: models.rs  types.rs
openapi-nfs/openapi-nssf/src/apis/: mod.rs  network_slice_information_document.rs  nf_instance_id_document.rs  nssai_availability_store.rs  subscription_id_document.rs  subscriptions_collection.rs
openapi-nfs/openapi-nssf/src/server/: mod.rs
openapi-nfs/openapi-pcf/: Cargo.toml  README.md
openapi-nfs/openapi-pcf/src/: header.rs  models.rs  types.rs
openapi-nfs/openapi-pcf/src/apis/: am_policy_associations_collection.rs  am_policy_events_subscription_document.rs  application_am_contexts_collection.rs  application_sessions_collection.rs  bdt_policies_collection.rs  events_subscription_document.rs  individual_am_policy_association_document.rs  individual_application_am_context_document.rs  (+14 more)
openapi-nfs/openapi-smf/: Cargo.toml
openapi-nfs/openapi-smf/src/: header.rs  lib.rs  models.rs  types.rs
openapi-nfs/openapi-udm/: Cargo.toml  README.md
openapi-nfs/openapi-udm/src/: models.rs  types.rs
openapi-smf/: Cargo.toml  README.md
openapi-smf/src/: header.rs  lib.rs  models.rs  types.rs
openapi-smf/src/apis/: individual_pdu_session_hsmfor_smf.rs  individual_pdu_session_nsmf_nidd.rs  individual_sm_context.rs  individual_subscription_document.rs  mod.rs  pdu_sessions_collection.rs  sm_contexts_collection.rs  subscriptions_collection.rs
openapi-smf/src/server/: mod.rs
retry-after/: Cargo.toml
retry-after/src/: lib.rs
scripts/parsing/: Cargo.toml
scripts/parsing/src/: main.rs
yaml/: openapi_amf.yaml  openapi_ausf.yaml  openapi_chf.yaml  openapi_nrf.yaml  openapi_nssf.yaml  openapi_pcf.yaml  openapi_smf.yaml  openapi_udm.yaml  openapi_udr.yaml  openapi_upf.yaml  progenitor_amf.yaml  progenitor_ausf.yaml  progenitor_chf.yaml  progenitor_nrf.yaml  progenitor_nssf.yaml  progenitor_pcf.yaml  progenitor_smf.yaml  progenitor_udm.yaml  progenitor_udr.yaml  progenitor_upf.yaml
(+101 files in other folders)
