[package]
name = "oasbi"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
# bytes = "1.0"
# chrono = { version = "0.4", default-features = false, features = ["serde"] }
bytes.workspace = true
chrono.workspace = true
futures-core.workspace = true
percent-encoding.workspace = true
regress.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
uuid.workspace = true
thiserror.workspace = true
http.workspace = true
smart-default.workspace = true
retry-after = { path = "../retry-after" }
