[package]
name = "retry-after"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
publish.workspace = true

[dependencies]
reqwest.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde = "1.0.214"